changes to finish translation of menu items + their parameters

--- a/modules/mod_jflanguageselection/language/en-GB/en-GB.mod_jflanguageselection.ini
+++ b/modules/mod_jflanguageselection/language/en-GB/en-GB.mod_jflanguageselection.ini
@@ -12,11 +12,11 @@ MOD_JFLANGUAGESELECTION_XML_DESCRIPTION="SITE: This module is placing a language
 MOD_JFLANGUAGESELECTION_APPEARANCE_OF_LANGUAGE_SELECTOR="Appereance of language selector"
 MOD_JFLANGUAGESELECTION_SHOW_ACTIVE_LANGUAGE="Show active language?"
 MOD_JFLANGUAGESELECTION_SELECT_WETHER_THE_ACTIVE_LANGUAGE_SHOULD_BE_SHOWN_OR_NOT="Select whether the active language showld be shown or not?"
-MOD_JFLANGUAGESELECTION_INCLUDE_JOOM!FISH_CSS="Include Joom!Fish CSS"
-MOD_JFLANGUAGESELECTION_TELLS_THE_MODULE_IF_THE_MODULE_JOOM!FISH_CSS_SHOULD_BE_INCLUDED_OR_NOT.="Tells the module if the module Joom!Fish CSS should be included or not."
+MOD_JFLANGUAGESELECTION_INCLUDE_JOOMFISH_CSS="Include Joom!Fish CSS"
+MOD_JFLANGUAGESELECTION_TELLS_THE_MODULE_IF_THE_MODULE_JOOMFISH_CSS_SHOULD_BE_INCLUDED_OR_NOT="Tells the module if the module Joom!Fish CSS should be included or not."
 MOD_JFLANGUAGESELECTION_CACHE_HREF_TRANSLATION="Cache href translations"
 MOD_JFLANGUAGESELECTION_SELECT_WHETHER_TO_CACHE_THE_RESULT_OF_THE_ROUTING_OF_THE_TRANSLATED_URL="Select whether to cache the result of the routing of the translated URL."
-MOD_JFLANGUAGESELECTION_A_SUFFIX_TO_BE_APPLIED_TO_THE_CSS_CLASS_OF_THE_MODULE_(TABLE.MODULETABLE),_THIS_ALLOWS_INDIVIDUAL_MODULE_STYLING="A suffix to be applied to the CSS class of the module (table.moduletable), this allows individual module styling."
+MOD_JFLANGUAGESELECTION_A_SUFFIX_TO_BE_APPLIED_TO_THE_CSS_CLASS_OF_THE_MODULE_TABLEMODULETABLE_THIS_ALLOWS_INDIVIDUAL_MODULE_STYLING="A suffix to be applied to the CSS class of the module (table.moduletable), this allows individual module styling."
 MOD_JFLANGUAGESELECTION_DROP_DOWN_OF_NAMES="Drop down of names"
 MOD_JFLANGUAGESELECTION_DROP_DOWN_OF_NAMES_WITH_CURRENT_LANGUAGE_FLAG="Drop down on names with current language flag"
 MOD_JFLANGUAGESELECTION_UL-LIST_OF_NAMES="ul-list of names"
@@ -24,4 +24,4 @@ MOD_JFLANGUAGESELECTION_UL-LIST_OF_NAMES_WITH_FLAG="ul-list of names with flag"
 MOD_JFLANGUAGESELECTION_UL-LIST_OF_IMAGES="ul-list of images"
 MOD_JFLANGUAGESELECTION_RAW_DISPLAY_OF_IMAGES="Raw display of images"
 MOD_JFLANGUAGESELECTION_JFMSELECT="Select"
-MOD_JFLANGUAGESELECTION_DEFINE_HOW_THE_SELECTOR_SHOULD_BE_GENERATED.="Define how the selector should be generated."
+MOD_JFLANGUAGESELECTION_DEFINE_HOW_THE_SELECTOR_SHOULD_BE_GENERATED="Define how the selector should be generated."
