Add information about published state field to content element file so we can check and update the status of translations.  Content uses 'state' other tables use 'published'

--- a/component/admin/language/en-GB.com_joomfish.ini
+++ b/component/admin/language/en-GB.com_joomfish.ini
@@ -408,5 +408,5 @@ JF_ACTION_PUBLISH_DESC="User can publish translations"
 JF_ACTION_DELETE="Delete Translations"
 JF_ACTION_DELETE_DESC="User can delete translations"
 
-RESET="Resetx"
+RESET="Reset"
 COM_JOOMFISH_CONTROL_PANEL="Control Panel"
