Google API V2 reintegration from JF-core

--- a/component/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/component/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -4,6 +4,10 @@
 ; license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 
 ; Note : All ini files need to be saved as UTF-8
+#New tags in 2.2.3
+GOOGLE_TRANSLATE_V2_API_KEY="Google translate v2 API key"
+GOOGLE_TRANSLATE_API_KEY="For automatic Google translations you need to get an API key from Google (commercial). See here https://code.google.com/intl/en-GB/apis/language/translate/v2/pricing.html"
+
 ; New tags in 2.1
 ; tags for the performance state information
 PERFORMANCE_STATE="Performance settings &amp; optimization"
