Fixes for language strings causing language files parsing errors

--- a/component/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/component/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -4,7 +4,7 @@
 ; license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 
 ; Note : All ini files need to be saved as UTF-8
-#New tags in 2.2.3
+;New tags in 2.2.3
 GOOGLE_TRANSLATE_V2_API_KEY="Google translate v2 API key"
 GOOGLE_TRANSLATE_API_KEY="For automatic Google translations you need to get an API key from Google (commercial). See here https://code.google.com/intl/en-GB/apis/language/translate/v2/pricing.html"
 
@@ -273,14 +273,14 @@ CPANEL="CPanel"
 CHECK_TRANSLATIONS="Check translations"
 CONFIGURATION="Configuration"
 ABOUT_AND_CREDITS="About &amp; Credits"
-JFCATEGORIES.SEARCHBOT="Multi lingual category searchbot"
-JFCONTACT.SEARCHBOT="Multi lingual contact searchbot"
-JFCONTENT.SEARCHBOT="Multi lingual content searchbot"
-JFNEWSFEEDS.SEARCHBOT="Multi lingual newsfeeds searchbot"
-JFSECTIONS.SEARCHBOT="Multi lingual sections searchbot"
-JFWEBLINKS.SEARCHBOT="Multi lingual weblinks searchbot"
-JFDATABASE.SYSTEMBOT="Multi lingual abstraction layer bot"
-JFALTERNATIVE.SYSTEMBOT="Joom!Fish alternative language bot"
+JFCATEGORIES_SEARCHBOT="Multi lingual category searchbot"
+JFCONTACT_SEARCHBOT="Multi lingual contact searchbot"
+JFCONTENT_SEARCHBOT="Multi lingual content searchbot"
+JFNEWSFEEDS_SEARCHBOT="Multi lingual newsfeeds searchbot"
+JFSECTIONS_SEARCHBOT="Multi lingual sections searchbot"
+JFWEBLINKS_SEARCHBOT="Multi lingual weblinks searchbot"
+JFDATABASE_SYSTEMBOT="Multi lingual abstraction layer bot"
+JFALTERNATIVE_SYSTEMBOT="Joom!Fish alternative language bot"
 MOD_JFLANGUAGESELECTION="Joom!Fish language selection"
 MOD_TRANSLATE="JoomFish Direct Translation"
 LANGUAGE_TITLE="Joom!Fish Language Manager"
