Unified installer: more bugfixes

--- a/admin/language/en-GB/en-GB.com_joomfish.sys.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.sys.ini
@@ -17,3 +17,7 @@ COM_JOOMFISH_LANGUAGES="Content Languages"
 COM_JOOMFISH_CONTENT_ELEMENTS="Content Elements"
 COM_JOOMFISH_PLUGINS="Plugins"
 COM_JOOMFISH_HELP="Help & Tips"
+COM_JOOMFISH_SUCCESS="Success"
+COM_JOOMFISH_FAIL="Fail";
+COM_JOOMFISH_INSTALL_EXTENSION="Installing"
+COM_JOOMFISH_UNINSTALL_EXTENSION="Uninstalling"
