Few language fixes

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -3,6 +3,14 @@
 ; copyright (C) 2003 - 2012 Think Network GmbH, Munich. All rights reserved.
 ; license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 
+;New tags in 2.5
+JF_EDIT="Edit"
+JF_AVAILABLE="Available"
+JF_NOT_AVAILABLE="Not available"
+JF_TOGGLE_SIDEBAR="Toggle"
+TRANSLATE_SYSTEM_CONFIGURATION="System configuration"
+JF_UP="UP"
+JF_BROWSE="Browse"
 ; Note : All ini files need to be saved as UTF-8
 ;New tags in 2.2.3
 GOOGLE_TRANSLATE_V2_API_KEY="Google translate v2 API key"
