Fix apply in translation manager. Change uniqueness check in #__translationmap to prevent adding multiple translations for the same original

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -11,6 +11,7 @@ JF_TOGGLE_SIDEBAR="Toggle"
 TRANSLATE_SYSTEM_CONFIGURATION="System configuration"
 JF_UP="UP"
 JF_BROWSE="Browse"
+ERROR_SAVING_TRANSLATION="An error occured while saving your translation"
 ; Note : All ini files need to be saved as UTF-8
 ;New tags in 2.2.3
 GOOGLE_TRANSLATE_V2_API_KEY="Google translate v2 API key"
