--- a/plugins/system/jfrouter/jfrouter/language/en-GB.plg_system_jfrouter.ini
+++ b/plugins/system/jfrouter/jfrouter/language/en-GB.plg_system_jfrouter.ini
@@ -14,17 +14,20 @@
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
+JOOMFISH_BASIC_ROUTER="Joomfish - Basic Router"
 ; New in 2.0 Stable
-DETERMINE_LANGUAGE_SELECTION_FOR_NEW_VISITORS_ONLY_ENABLE_LANGUAGE_DETERMINATION_IS_'YES'="Determine language selection for new visitors (only Enable Language determination is 'Yes')"
-FOR_NEW_USERS_THE_REDIRECTION_TO_THE_CORRECT_LANGUAGE_IS_DONE_BY_AUTOMATIC_INTEGRATION_OR_AN_OFFICIAL_302_REDIRECT_TO_A_DIFFERENT_URL_SUCH_AS_WWW.YOURDOMAIN.COMEN="For new users the redirection to the correct language is done by automatic integration or an official 302 redirect to a different URL such as www.yourdomain.com/en"
-IF_AN_UNKOWN_USER_COMES_TO_YOUR_SITE__TRY_TO_DETERMINATE_THE_LANGUAGE_BASED_ON_THE_BROWSER_SETTINGS.="If an unkown user comes to your site - try to determinate the language based on the browser settings."
+DETERMINE_LANGUAGE_SELECTION_FOR_NEW_VISITORS_ONLY_ENABLE_LANGUAGE_DETERMINATION_IS_YES="Determine language selection for new visitors (only Enable Language determination is Yes)"
+FOR_NEW_USERS_THE_REDIRECTION_TO_THE_CORRECT_LANGUAGE_IS_DONE_BY_302="For new users the redirection to the correct language is done by automatic integration or an official 302 redirect to a different URL such as www.yourdomain.com/en"
+IF_AN_UNKOWN_USER_COMES_TO_YOUR_SITE__TRY_TO_DETERMINATE_THE_LANGUAGE_BASED_ON_THE_BROWSER_SETTINGS="If an unkown user comes to your site - try to determinate the language based on the browser settings."
 SEF_PREFIX_DESCRIPTION="What prefix the router should use, if SEF is enabled?"
 SEF_DOMAIN_DESCRIPTION="What domain should be used, if the option is enabled? This includes sub-domains or any top level domain you like."
-SWITCH_OFF_THE_COOKIE_ONLY_IF_YOU_HAVE_A_DIFFERENT_SOLUTION_TO_DEFINE_THE_ONCE_SELECTED_LANGUAGE_E.G._VIA_AN_URL.="Switch off the cookie only if you have a different solution to define the once selected language, e.g. via an URL."
+SWITCH_OFF_THE_COOKIE_ONLY="Switch off the cookie only if you have a different solution to define the once selected language, e.g. via an URL."
 TBD="To be detailed."
 USE_JF_ROUTER_IF_AVAILABLE__THIS_IS_A_PROJECT_SPONSORS_ONLY_ADDON="Use JF Router Pro if available - this is a project sponsors only addon."
+
+
 ; RC1 release on 27 August 2008
-WHEN_ACTIVATED_THIS_BOT_PROVIDES_LANGUAGE_DETERMINATION_AND_BASIC_ROUTING._MUST_BE_ENABLED_UNLESS_YOU_ARE_USING_A_SEF_PLUGIN_THAT_PERFORMS_THE_SAME_TASKS.="When activated this plugin provides language determination and basic routing. Must be enabled unless you are using a SEF plugin that performs the same tasks."
+WHEN_ACTIVATED_THIS_PLUGIN_PROVIDES_LANGUAGE_DETERMINATION_AND_BASIC_ROUTING="When activated this plugin provides language determination and basic routing. Must be enabled unless you are using a SEF plugin that performs the same tasks."
 USE_JF_ROUTER_IF_AVAILABLE="Use JF Router if available"
 ENABLE_LANGUAGE_DETERMINATION="Enable Language determination"
 LANGUAGE_SELECTION_FOR_NEW_VISITORS="Language selection for new visitors?"
