More missing language strings

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -12,6 +12,7 @@ TRANSLATE_SYSTEM_CONFIGURATION="System configuration"
 JF_UP="UP"
 JF_BROWSE="Browse"
 ERROR_SAVING_TRANSLATION="An error occured while saving your translation"
+JFCLOSE="Close"
 ; Note : All ini files need to be saved as UTF-8
 ;New tags in 2.2.3
 GOOGLE_TRANSLATE_V2_API_KEY="Google translate v2 API key"
@@ -61,10 +62,12 @@ JF_SPLASH_WELCOME_TO="Welcome to"
 JF_SPLASH_VIDEOPREVIEW="Joom!Fish video previews"
 JF_SPLASH_VIDEO_DOCUMENTATION="Video documentation"
 JF_SPLASH_VIDEO_DOCUMENTATION_DESC="Various user, administrator and developer guides are available in our increasing video documentation pool. Make your entry in multilingual websites as easy as watching a video."
+JF_SPLASH_SCREENS="Joomfish splash screens"
 JF_SPLASH_SUPPORT="Joom!Fish support"
 JF_SPLASH_SUPPORT_FORUM="Joom!Fish Forum"
 JF_SPLASH_SUPPORT_FORUM_DESC="Our community meets in our forum and website. Feel free to access these knowledge base of tricks, solutions and ideas free of charge."
 JF_FIND_OUT_MORE="Find out more ..."
+CLICK_TO_START_THE_VIDEO="Clisk to start the video"
 ; Changed tags in 2.1
 TITLE_IMAGE="Image file"
 ;Former NAME_HELP!
