Typos: Lable -> Label

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -321,7 +321,7 @@ DATABASEFIELDS="Database fields"
 DATABASEFIELDS_HELP="Definition of the related fields in your database."
 DBFIELDNAME="Name"
 DBFIELDTYPE="Type"
-DBFIELDLABLE="Label"
+DBFIELDLABEL="Label"
 TRANSLATE="Translate"
 SET_DEFAULT_TEXT="Set default text"
 SET_COMPLETE="Set complete"
