Missing language string for Extension filter

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -4,6 +4,7 @@
 ; license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 
 ;New tags in 2.5
+EXTENSION_FILTER="Extension"
 JF_EDIT="Edit"
 JF_AVAILABLE="Available"
 JF_NOT_AVAILABLE="Not available"
