New override missing from the installer xml, missing error message string

--- a/plugins/system/jfoverrides/language/en-GB.plg_system_jfoverrides.ini
+++ b/plugins/system/jfoverrides/language/en-GB.plg_system_jfoverrides.ini
@@ -5,3 +5,4 @@
 
 JOOMFISH_OVERRIDES="Joomfish - Core overrides"
 WHEN_ACTIVATED_THIS_PLUGIN_PROVIDES_NECESSARY_JOOMLA_OVERRIDES="When activated this plugin provides core overrides necessary for Joomfish to work correctly"
+PLG_SYSTEM_JFOVERRIDES_MISSING_CLASS_FILE="Missing overrides class file: "
