Language changes, plugin not published notice, add missing include, fixes #79

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -20,6 +20,10 @@ COM_JOOMFISH_SELECT_AN_ITEM="Select Item"
 COM_JOOMFISH_CHANGE_ITEM_BUTTON="Select"
 COM_JOOMFISH_SELECTOR_TRANSLATION_OF="Translation of: "
 COM_JOOMFISH_SELECTOR_ORIGINAL_ID="Original Item Id"
+JF_DATABASE_PLUGIN_NOT_PUBLISHED="Joom!Fish Database plugin not installed correctly or not published - Jomfish will not work in this state"
+JF_COMPONENT_NOT_INSTALLED="Joom!Fish extension not installed correctly. Plugin not executed"
+JF_ROUTER_PLUGIN_NOT_INSTALLED="Joom!Fish router plugin not installed correctly. Plugin not executed"
+
 
 ; Note : All ini files need to be saved as UTF-8
 ;New tags in 2.2.3
@@ -382,7 +386,6 @@ FALLBACK_HELP="Choose a Joomla filename to represent a fallback language if no t
 ERROR="Error:"
 EDITED_BY_ANOTHER_ADMIN_ERROR="The content item [ %s ] is currently being edited by another administrator // %s=$translationObject->title"
 CONFIG_WRITE_ERROR="Config file not writeable!"
-MAMBOT_ERROR="Multi lingual abstraction layer plugin is not installed or published - will not work in this state!"
 FILEUPLOAD_ERROR="File could not be copied"
 NO_LANGUAGE_DBERROR="You must choose a language"
 NO_SUCH_TRANSLATION="No such translation as %s - it has not been deleted<br/>"
