Fix blank screen if wrong database driver is used, throw Notice

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -23,7 +23,7 @@ COM_JOOMFISH_SELECTOR_ORIGINAL_ID="Original Item Id"
 JF_DATABASE_PLUGIN_NOT_PUBLISHED="Joom!Fish Database plugin not installed correctly or not published - Jomfish will not work in this state"
 JF_COMPONENT_NOT_INSTALLED="Joom!Fish extension not installed correctly. Plugin not executed"
 JF_ROUTER_PLUGIN_NOT_INSTALLED="Joom!Fish router plugin not installed correctly. Plugin not executed"
-
+JF_DATABASE_DRIVER_NOT_SUPPORTED="Mysql database driver not supported. Joom!Fish Database plugin not executed."
 
 ; Note : All ini files need to be saved as UTF-8
 ;New tags in 2.2.3
