--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -24,7 +24,7 @@ JF_DATABASE_PLUGIN_NOT_PUBLISHED="Joom!Fish Database plugin not installed correc
 JF_COMPONENT_NOT_INSTALLED="Joom!Fish extension not installed correctly. Plugin not executed"
 JF_ROUTER_PLUGIN_NOT_INSTALLED="Joom!Fish router plugin not installed correctly. Plugin not executed"
 JF_DATABASE_DRIVER_NOT_SUPPORTED="Mysql database driver not supported. Joom!Fish Database plugin not executed."
-
+NO_JOOMFISH_PLUGINS_INSTALLED_YET="No Joomfish plugins installed"
 ; Note : All ini files need to be saved as UTF-8
 ;New tags in 2.2.3
 GOOGLE_TRANSLATE_V2_API_KEY="Google translate v2 API key"
