+ added missing language string

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -2,6 +2,7 @@
 ; author Joom!Fish Project
 ; copyright (C) 2003 - 2013 Think Network GmbH, Konstanz. All rights reserved.
 ; license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8
 
 ;New tags in 2.5
 EXTENSION_FILTER="Extension"
@@ -25,7 +26,8 @@ JF_COMPONENT_NOT_INSTALLED="Joom!Fish extension not installed correctly. Plugin 
 JF_ROUTER_PLUGIN_NOT_INSTALLED="Joom!Fish router plugin not installed correctly. Plugin not executed"
 JF_DATABASE_DRIVER_NOT_SUPPORTED="Mysql database driver not supported. Joom!Fish Database plugin not executed."
 NO_JOOMFISH_PLUGINS_INSTALLED_YET="No Joomfish plugins installed"
-; Note : All ini files need to be saved as UTF-8
+LANGUAGES_REMOVED="Languages removed. They may appear again as you have the language files installed."
+
 ;New tags in 2.2.3
 GOOGLE_TRANSLATE_V2_API_KEY="Google translate v2 API key"
 GOOGLE_TRANSLATE_API_KEY="For automatic Google translations you need to get an API key from Google (commercial). See here https://code.google.com/intl/en-GB/apis/language/translate/v2/pricing.html"
