--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -81,7 +81,7 @@ JF_SPLASH_SUPPORT="Joom!Fish support"
 JF_SPLASH_SUPPORT_FORUM="Joom!Fish Forum"
 JF_SPLASH_SUPPORT_FORUM_DESC="Our community meets in our forum and website. Feel free to access these knowledge base of tricks, solutions and ideas free of charge."
 JF_FIND_OUT_MORE="Find out more ..."
-CLICK_TO_START_THE_VIDEO="Clisk to start the video"
+CLICK_TO_START_THE_VIDEO="Click to start the video"
 ; Changed tags in 2.1
 TITLE_IMAGE="Image file"
 ;Former NAME_HELP!
