Some more installer tweaks, add preflight database type check

--- a/admin/language/en-GB/en-GB.com_joomfish.sys.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.sys.ini
@@ -21,3 +21,4 @@ COM_JOOMFISH_SUCCESS="Success"
 COM_JOOMFISH_FAIL="Fail";
 COM_JOOMFISH_INSTALL_EXTENSION="Installing"
 COM_JOOMFISH_UNINSTALL_EXTENSION="Uninstalling"
+COM_JOOMFISH_DATABASE_DRIVER_NOT_SUPPORTED="database driver is not supported, you need to use mysqli driver. Install aborted."
