#132 - fixing array issue with having a working array management integrated. Now the error occurs and the data is not lost #123 - fixing order issue as existing languages will no longer be overwritten by frontend language information + special indication for new frontend languages that are not stored as content languages yet + additional language tags for not stored content languages

--- a/admin/language/en-GB/en-GB.com_joomfish.ini
+++ b/admin/language/en-GB/en-GB.com_joomfish.ini
@@ -4,6 +4,14 @@
 ; license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+;Changed tags in 2.5.1
+TITLE_ACTIVE="active"
+ACTIVE_HELP="Only active languages will be presented online. Non active languages can be used for preparation of translations."
+TITLE_STATUS="Status"
+STATUS_HELP="Use the checkbox to indicate a language as published/active languages. Only these languages will be presented online. Non active languages can be used for preparation of translations.<br />If a warning symbol is show this language is not saved as content language yet. The data is retrieved from the installed language package."
+JF_NOT_SAVED="Content language settings not saved yet"
+JF_NOT_SAVED_LANGUAGE="The content language information are not saved yet. You have a valid frontend translation file installed, but no content language defined. Just save your configuration and the content languages will be created."
+
 ;New tags in 2.5
 EXTENSION_FILTER="Extension"
 JF_EDIT="Edit"
@@ -90,7 +98,6 @@ IMAGES_DIR_HELP="To use the default flags leave empty (File name based on short 
 TITLE_SHORTCODE="SEF code"
 SHORTCODE_HELP="Define a short code for usage within language switching or the URL. If empty Locale/ISO code will be used."
 JOOMLACODE_HELP="The name of the Joomla! language directory."
-TITLE_ACTIVE="Published"
 TITLE_JOOMLA="Joomla file"
 WHAT_TO_SHOW_IF="<div style='font-weight:bold;font-size:1.1em;width:100%;border-bottom:1px solid #CCCCCC;'>What to show if ...</div>"
 ADVANCED_USERS_ONLY="<div style='font-weight:bold;font-size:1.1em;width:100%;border-bottom:1px solid #CCCCCC;'>Advanced Users Only</div>"
@@ -322,7 +329,6 @@ TITLE_STATE="State"
 TITLE_PUBLISHED="Published"
 DISPLAY="Display #"
 NEW="New"
-TITLE_ACTIVE="active"
 TITLE_ISOCODE="ISO Code"
 DB_REFERENCE="DB Reference"
 SAMPLE_DATA="Sample data"
@@ -379,7 +385,6 @@ ALL_MENUS="All Menus"
 CLIPBOARD_COPIED="original value has been copied to the clipboard.<br />Now paste in your editor as html"
 CLIPBOARD_COPY="press ctl-C or command-C to copy original value to the clipboard.<br />Then paste in your editor as html"
 CLIPBOARD_NOSUPPORT="your browser does not support copying to the clipboard.<br />Select the original by hand and copy and paste"
-ACTIVE_HELP="Only active languages will be presented online. Non active languages can be used for preparation of translations."
 ORDER_HELP="Ordering in the frontend."
 TRANS_DEFAULT_HELP="Use for individual fixed text. To use language depended information leave empty and use the <strong> NO TRANSLATION AVAILABLE</strong> constant defined in the Joom!Fish language files."
 SPACER_HELP="Spacer for displaying language selector in textmode when in horizontal mode.<br /><strong>Hint</strong>: If nothing is filled here in, but horizontal mode is selected, usually a spacer will be defined by Joomla as: | (with space before and after).<br />Space before and after will be used always."
