#137 correcting links to the new repository

--- a/README
+++ b/README
@@ -56,6 +56,6 @@ and support is an additional service.
 
 
 Please make sure you read the wiki, especially 
-installation instructions https://github.com/JoomFish/jf-future/wiki/_pages
+installation instructions https://github.com/JoomFish/joomfish-2.5/wiki/_pages
 
-And - DO REPORT any issues you might find on the issue tracker https://github.com/JoomFish/jf-future/issues
+And - DO REPORT any issues you might find on the issue tracker https://github.com/JoomFish/joomfish-2.5/issues
